--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração Contìnua</li>
+        <li>Teste de repositorio remoto!!! </li>
     </ul>
 </body>
 </html>
