Alterando titulo da pagina

--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos da Alura</title>
+    <title>Cursos de GIT Alura</title>
 </head>
 <body>
     <ul>
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-<<<<<<< HEAD
         <li>Integração Continua</li>
-=======
         <li>Subindo alteracao no repositorio remoto!!! </li>
->>>>>>> ec1497ad04fb5f800257fecdad674d5b9ce52d4d
     </ul>
 </body>
 </html>
