Alura com letra minúscula

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos de GIT Alura</title>
+    <title>Cursos de GIT alura</title>
 </head>
 <body>
     <ul>
