Mudando título para Cursos YouTube

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos de GIT alura</title>
+    <title>Lista de Cursos no YouTube</title>
+    
 </head>
 <body>
     <ul>
@@ -11,6 +12,9 @@
         <li>Ansible</li>
         <li>Integração Continua</li>
         <li>Subindo alteracao no repositorio remoto!!! </li>
+        <li>C#</li>
+        <li>PHP</li>
+        <li>Java</li>
     </ul>
 </body>
 </html>
