Trocando titulo para Lista de Cursos no youtube

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de Cursos no YouTube</title>
+    <title>Lista de Cursos no youtube</title>
     
 </head>
 <body>
