--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lista de Cursos no youtube</title>
+    <title>Play lists de Cursos</title>
     
 </head>
 <body>
